[package]
name = "async-diesel"
version = "0.1.0"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
edition = "2018"
description = "Integrate Diesel into async-std cleanly and efficiently."
repository = "https://github.com/mehcode/async-diesel"
license = "MIT/Apache-2.0"
categories = ["asynchronous", "database"]

[dependencies]
async-trait = "0.1.36"
diesel = { version = "1.4.5", features = [ "r2d2" ] }
futures = "0.3.5"
async-std = { version = "1.6.2", features = [ "unstable" ] }

[dev-dependencies]
diesel = { version = "1.4.5", features = [ "postgres", "extras" ] }
uuid = { version = "0.8.1", features = [ "v4" ] }
async-std = { version = "1.6.2", features = [ "attributes" ] }
